force-app/main/default/objects/Vehicle_Order__c/Vehicle_Order__c.object-meta.xml
<CustomObject>
    <label>Vehicle Order</label>
    <nameField>
        <displayFormat>VO-{00000}</displayFormat>
        <label>Vehicle Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>