force-app/main/default/objects/Vehicle_Order__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration</label>
    <referenceTo>Car_Configuration__c</referenceTo>
    <relationshipLabel>Vehicle Orders</relationshipLabel>
    <relationshipName>Vehicle_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>