force-app/main/default/objects/Vehicle_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicle Orders</relationshipLabel>
    <relationshipName>Vehicle_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>