force-app/main/default/objects/Vehicle_Order__c/fields/ERPIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ERPIdentifier__c</fullName>
    <displayFormat>25{000}234</displayFormat>
    <externalId>true</externalId>
    <label>ERPIdentifier</label>
    <type>AutoNumber</type>
</CustomField>