force-app/main/default/objects/Vehicle_Order__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <label>Service Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>