force-app/main/default/objects/Vehicle_Order__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <label>Service Location</label>
    <required>true</required>
    <scale>0</scale>
    <type>Location</type>
</CustomField>