force-app/main/default/objects/Vehicle_Order__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <defaultValue>36000</defaultValue>
    <label>Total</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>